--- a/about/index.html
+++ b/about/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Eric Feng</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/programs">CV</a></li>
-        		<li><a href="/games">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>About</h1>
-				<p>My name is Eric Feng. I currently develop grames and apps in Java and C#</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/secretlygod">github.com/secretlygod</a></li>
-			</ul>
-		</footer>
-	</body>
+---
+
+layout: default
+
+title: About Eric Feng
+
+---
+
+
+
+		<div class="about">
+
+			<h1>About</h1>
+
+			<p>I develop Java and C# Programs and Games</p>
+
+
+
+			<ul class="contacts">
+
+				
+
+				<li><a href="#">Another site you want to link to</a></li>
+
+				</ul>
+
+		</div
