--- a/about/index.html
+++ b/about/index.html
@@ -1,27 +1,27 @@
----
-
-layout: default
-
-title: About Eric Feng
-
----
-
-
-
-		<div class="about">
-
-			<h1>About</h1>
-
-			<p>I develop Java and C# Programs and Games</p>
-
-
-
-			<ul class="contacts">
-
-				
-
-				<li><a href="#">Another site you want to link to</a></li>
-
-				</ul>
-
-		</div
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>About</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/programs">Programs</a></li>
+        		<li><a href="/games">Games</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>About</h1>
+				<p>I develop games and programs using Java and C#</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="https://github.com/secretlygod">github.com/secretlygod</a></li>
+			</ul>
+		</footer>
+	</body>
