--- a/updatehost/fnconfigeditor/index.html
+++ b/updatehost/fnconfigeditor/index.html
@@ -9,8 +9,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/programs">CV</a></li>
-        		<li><a href="/games">Blog</a></li>
+        		<li><a href="/programs">Programs</a></li>
+        		<li><a href="/games">Games</a></li>
     		</ul>
 		</nav>
 		<div class="container">
