--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="https://github.com/secretlygod">github.com/secretlygod</a></li>
+			<li><a href="https://sites.google.com/view/ericinc">Main Site</a></li>
 			</ul>
 		</footer>
 	</body>
