--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Eric Feng!</h1>
-				<p>Website is under construction...</p>
+				<p>Website is under construction... TEST</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
